# cpp-build-practice

./: CMakeLists.txt  Makefile  README.md
src/: Makefile  bar.cpp  foo.cpp
